<resources>
    <string name="app_name">Legally Distinct \n &amp; \n Dragons</string>
    <string name="app_description">A character building and sharing tool for every adventurer!</string>
    <string name="login_button">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="character_name">character name</string>
    <string name="body_stat">Body</string>
    <string name="mind_stat">Mind</string>
    <string name="create_account">Create Account</string>
    <string name="choose_a_password">Pick a Secure Password</string>
    <string name="register">Register</string>
    <string name="choose_a_username">Choose a Username</string>

    <string name="sheet_mindval">8</string>
    <string name="sheet_BodyVal">8</string>
    <string name="char_description">Insert description here</string>
    <string name="save_sheet">Save</string>
    <string name="sheet_delete">Delete</string>
    <string name="sheet_cancel">Cancel</string>

    <string-array name="Navigation">
        <item>Sheet Builder</item>
        <item>My Sheets</item>
        <item>Profile</item>
    </string-array>

</resources>