<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/sheet_MindStat"
        android:layout_width="89dp"
        android:layout_height="54dp"
        android:layout_marginEnd="64dp"
        android:ems="10"
        android:hint="8"
        android:inputType="number"
        android:textAlignment="center"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="172dp" />

    <EditText
        android:id="@+id/sheet_CharacterName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:hint="@string/character_name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/sheet_BodyStat"
        android:layout_width="89dp"
        android:layout_height="54dp"
        android:ems="10"
        android:hint="8"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/sheet_MindStat"
        app:layout_constraintHorizontal_bias="0.343"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="172dp" />

    <TextView
        android:id="@+id/sheetBodyStat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:text="@string/body_stat"
        app:layout_constraintBottom_toTopOf="@+id/sheet_BodyStat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sheet_CharacterName" />

    <TextView
        android:id="@+id/sheetMindStat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="164dp"
        android:layout_marginBottom="28dp"
        android:text="@string/mind_stat"
        app:layout_constraintBottom_toTopOf="@+id/sheet_MindStat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.067"
        app:layout_constraintStart_toEndOf="@+id/sheetBodyStat" />
</androidx.constraintlayout.widget.ConstraintLayout>